(#5) chore: Implement css for slides

--- a/slides.mdx
+++ b/slides.mdx
@@ -16,6 +16,8 @@ import ImageJeffBezos from './assets/images/creator.jpg';
 import ImageAWSEc2 from './assets/images/aws-ec2.png';
 import ImageQuestions from './assets/images/questions.jpg';
 
+import './deck.css';
+
 export const themes = [book, prism, aspect];
 
 ---
